16 May 2012: Wouter
	- Updated doc/FEATURES with RFCs that are implemented but not listed.

15 May 2012: Wouter
	- fix configure ECDSA support in ldns detection for windows compile.
	- fix possible uninitialised variable in windows pipe implementation.

9 May 2012: Wouter
	- Fix alignment problem in util/random on sparc64/freebsd.

8 May 2012: Wouter
	- Fix for accept spinning reported by OpenBSD.
	- iana portlist updated.

2 May 2012: Wouter
	- Fix validation of nodata for DS query in NSEC zones, reported by
	  Ondrej Mikle.

13 April 2012: Wouter
	- ECDSA support (RFC 6605) by default. Use --disable-ecdsa for older
	  openssl.

10 April 2012: Wouter
	- Applied patch from Daisuke HIGASHI for rrset-roundrobin and
	  minimal-responses features.
	- iana portlist updated.

5 April 2012: Wouter
	- fix bug #443: --with-chroot-dir not honoured by configure.
	- fix bug #444: setusercontext was called too late (thanks Bjorn
	  Ketelaars).

27 March 2012: Wouter
	- fix bug #442: Fix that Makefile depends on pythonmod headers
	  even using --without-pythonmodule.

22 March 2012: Wouter
	- contrib/validation-reporter follows rotated log file (patch from
	  Augie Schwer).

21 March 2012: Wouter
	- new approach to NS fetches for DS lookup that works with
	  cornercases, and is more robust and considers forwarders.

19 March 2012: Wouter
	- iana portlist updated.
	- fix to locate nameservers for DS lookup with NS fetches.

16 March 2012: Wouter
	- Patch for access to full DNS packet data in unbound python module
	  from Ondrej Mikle.

9 March 2012: Wouter
	- Applied line-buffer patch from Augie Schwer to validation.reporter.sh.

2 March 2012: Wouter
	- flush_infra cleans timeouted servers from the cache too.
	- removed warning from --enable-ecdsa.

1 March 2012: Wouter
	- forward-first option.  Tries without forward if a query fails.
	  Also stub-first option that is similar.

28 February 2012: Wouter
	- Fix from code review, if EINPROGRESS not defined chain if statement